tests/paczka1/fuzzy1/47164786.err
Error in line 1: A950 A950 42,0
Error in line 7: lTvL A950 9,4
Error in line 8: Qeqd A84 5,8
Error in line 5: A950 A45 8,1
Error in line 10: lTvL S662 17,7
Error in line 32: jUJ6fwatqke A950 49,3
